--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "re-base": "^4.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
